tests/macros/input/editor.rs
fn main() {
    let q = requestty::questions![Input { editor: todo!() }];
}
